samples/_failures_safe/1761662450_3df59d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_005c8c7c.c: In function ‘main’:
./samples/SAFE/__tmp_005c8c7c.c:148:9: error: expected expression at end of input
  148 |         if (result.compressed_size > 0)
      |         ^~
./samples/SAFE/__tmp_005c8c7c.c:148:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_005c8c7c.c:148:9: error: expected declaration or statement at end of input
